--- a/src/main/resources/templates/addProject.html
+++ b/src/main/resources/templates/addProject.html
@@ -20,14 +20,6 @@
 </head>
 <body class="container-fluid">
 <nav class="navbar navbar-light" style="background-color: #003C70; height: 72px">
-    <!--<img src="../static/images/AU_logo.png"
-         width="70" height="70" alt="" th:src="@{/images/AU_logo.png}"
-         style="float: left"/>
-    <p class="text-center" style="font-size: xx-large; font-style: normal; color: white; margin-top: 10px">Bilgisayar Mühendisliği
-        Araştırma Verilerinin Değerlendirilmesi Sistemi</p>
-    <img src="../static/images/muhendislik_fak_logo.png"
-         width="70" height="70" alt="" th:src="@{/images/muhendislik_fak_logo.png}"
-         style="float: right; margin-top: -65px"/>-->
 
     <div class="text-left" style="font-size: large; font-style: normal; color: white; margin-top: 20px; margin-left: 5px">Bilgisayar Mühendisliği Bölümü</div>
     <div class="text-center">
@@ -44,30 +36,7 @@
         </form>
     </ul>
 </nav>
-<!--<nav class="navbar navbar-light" style="margin-top:-19px; height: 72px; border-color: gainsboro">
-    <div class="input-group rounded" style="width: 500px; margin: auto; margin-top: 15px">
-        <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
-               aria-describedby="search-addon" />
-        <span class="input-group-text border-0" id="search-addon">
-                <i class="fas fa-search"></i>
-            </span>
-    </div>
-    <ul class="nav navbar" sec:authorize="isAuthenticated()" >
-        <form th:action="@{/logout}" method="post" style="max-width: 400px; margin-top: -35px; margin-left: 1660px">
-            <button class="btn btn-default" type="submit" value="Logout">
-                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-arrow-right" fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                          d="M11.646 11.354a.5.5 0 0 1 0-.708L14.293 8l-2.647-2.646a.5.5 0 0 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z"/>
-                    <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z"/>
-                    <path fill-rule="evenodd"
-                          d="M2 13.5A1.5 1.5 0 0 1 .5 12V4A1.5 1.5 0 0 1 2 2.5h7A1.5 1.5 0 0 1 10.5 4v1.5a.5.5 0 0 1-1 0V4a.5.5 0 0 0-.5-.5H2a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-1.5a.5.5 0 0 1 1 0V12A1.5 1.5 0 0 1 9 13.5H2z"/>
-                </svg>
-                Çıkış
-            </button>
-        </form>
-    </ul>
-</nav>-->
+
 <nav class="navbar navbar-light" style="width: 500px; margin: auto">
 </nav>
 <nav class="navbar navbar-light" style="width: 500px; margin: auto">
@@ -98,8 +67,8 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="projeYil" class="col-sm-2 control-label">Yıl</label>
-            <select class="form-control" id="projeYil" name="projeYil" style="width: 745px; margin: 0 auto">
+            <label for="yil" class="col-sm-2 control-label">Yıl</label>
+            <select class="form-control" id="yil" name="yil" style="width: 745px; margin: 0 auto">
                 <option>2021</option>
                 <option>2020</option>
                 <option>2019</option>
