--- a/src/main/resources/templates/allArticles.html
+++ b/src/main/resources/templates/allArticles.html
@@ -76,14 +76,6 @@
 <body class="container-fluid">
 
 <nav class="navbar navbar-light" style="background-color: #003C70; height: 72px">
-    <!--<img src="../static/images/AU_logo.png"
-         width="70" height="70" alt="" th:src="@{/images/AU_logo.png}"
-         style="float: left"/>
-    <p class="text-center" style="font-size: xx-large; font-style: normal; color: white; margin-top: 10px">Bilgisayar Mühendisliği
-        Araştırma Verilerinin Değerlendirilmesi Sistemi</p>
-    <img src="../static/images/muhendislik_fak_logo.png"
-         width="70" height="70" alt="" th:src="@{/images/muhendislik_fak_logo.png}"
-         style="float: right; margin-top: -65px"/>-->
 
     <div class="text-left" style="font-size: large; font-style: normal; color: white; margin-top: 20px; margin-left: 5px">Bilgisayar Mühendisliği Bölümü</div>
     <div class="text-center">
@@ -108,6 +100,10 @@
             <path d="M7 5.5a1 1 0 0 0-1 1V13a.5.5 0 0 0 1 0v-2h1.188a2.75 2.75 0 0 0 0-5.5H7zM8.188 10H7V6.5h1.188a1.75 1.75 0 1 1 0 3.5z"/>
             <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z"/>
         </svg>  Tüm Projeler</a>
+        <a href="/admin/allBildiri"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-file-text" viewBox="0 0 16 16">
+            <path d="M5 4a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1H5zm-.5 2.5A.5.5 0 0 1 5 6h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zM5 8a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1H5zm0 2a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1H5z"/>
+            <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
+        </svg>  Tüm Bildiriler</a>
         <a href="/admin/createReport"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-clipboard-data" viewBox="0 0 16 16">
             <path d="M4 11a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0v-1zm6-4a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0V7zM7 9a1 1 0 0 1 2 0v3a1 1 0 1 1-2 0V9z"/>
             <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
@@ -130,31 +126,7 @@
         }
     </script>
 </nav>
-<!--<nav class="navbar navbar-light" style="margin-top:-19px; height: 72px; border-color: gainsboro">
-    <div class="input-group rounded" style="width: 500px; margin: auto; margin-top: 15px">
-        <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
-               aria-describedby="search-addon" />
-        <span class="input-group-text border-0" id="search-addon">
-                <i class="fas fa-search"></i>
-            </span>
-    </div>
-    <div class="dropdown" style="float: right; margin-top: -35px">
-        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="true">
-            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-            Menü
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-            <li><a href="/admin/onayBekleyenler">Onay Bekleyenler</a></li>
-            <li><a href="/admin/allStaff">Tüm Personeller</a></li>
-            <li><a href="/admin/allArticles">Tüm Makaleler</a></li>
-            <li><a href="/admin/allProjects">Tüm Projeler</a></li>
-            <li><a href="/admin/createReport">Raporlar</a></li>
-            <li><a href="/logout">Çıkış</a></li>
-        </ul>
-    </div>
-</nav>-->
+
 <nav class="navbar navbar-light" style="width: 500px; margin: auto">
     <div></div>
     <div></div>
@@ -215,9 +187,6 @@
             </tbody>
         </table>
     </div>
-    <!--<a th:href="@{/admin/pdf}">
-        <span>Download PDF Document</span>
-    </a>-->
 </main>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
